# Pet_Snowboard_Store_Project

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  main.py  pyproject.toml
src/: main.py
src/api/v1/: router.py
src/core/: constants.py
src/core/config/: app.py  logging.py
src/core/database/: annotations.py  db_depends.py
src/models/: attribute.py  base.py  cart.py  order.py  product.py  user.py
