[tool.poetry]
name = "pet-snowboard-store-project"
version = "0.1.0"
description = "pet project for in-depth study of FastApi"
authors = [
    "Егор Горьковой <egor.gorkij@yandex.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
loguru = "^0.7.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"
jinja2 = "^3.1.5"
python-slugify = "^8.0.4"
slugify = "^0.0.1"
psycopg2-binary = "^2.9.10"
pytest-lazy-fixtures = "^1.1.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
